@@ -1,5 +1,14 @@
 ﻿=== 1.3.6 / 2010-02-??
 
+NOTE:
+
+http://rubygems.org is now the default source for downloading gems.
+
+You may have sources set via ~/.gemrc, so you should replace
+http://gems.rubyforge.org with http://rubygems.org
+
+http://gems.rubyforge.org will continue to work for the forseeable future.
+
 New features:
 
 * `gem` commands
